subscriptions: Fix wrapping of channel name above 18px font size.
We limit the width of the channel title and show ellipsis for
overflowing channel name.

--- a/web/styles/subscriptions.css
+++ b/web/styles/subscriptions.css
@@ -1555,3 +1555,12 @@ div.settings-radio-input-parent {
         }
     }
 }
+
+.selected-stream-title {
+    max-width: 75%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: block;
+    margin: auto;
+}
